--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: La libreta de Gastón
 author: Gastón H. Salazar-Silva
 email: gaston_salazar@yahoo.com
 description: >- # this means to ignore newlines until "baseurl:"
-	Aquí escribo de todo y sobre todo
+        Aquí escribo de todo y sobre todo.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
