Update _config.yml to incorporate mastodon.

--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 github_username:  ghsalazar
 linkedin_username: ghsalazar
-mastodon:
-	- username: ghsalazar
-	  instance: mastodon.world
+mastodon: mastodon.world/@ghsalazar
 
 # Build settings
 theme: minima
